monticore-generator/src/test/resources/cocos/invalid/A4033/a4033.mc4
package cocos.invalid.A4033;

grammar a4033 {
  a = "a";

}